sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:18: error: not found: value x
			if (plusPetit(x-1,x)) {}
                                      ^AlgCocktailSort3:20: error: not found: value x
				echange(x-1,x)
                                        ^