sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.code
def cocktailSort3() {
	var etape:Int=0
	var compteur:Int=1
	while (compteur!=0) {
		compteur=0
		for (x<-0+etape to getNombreValeurs()-2-etape) {
			if (plusPetit(x,x+1)) {}
			else {
				echange(x,x+1)
				compteur=compteur+1
			}
		}
		etape=etape+1
		if (compteur!=0) {
			for (x<-getNombreValeurs()-1-etape to etape by -1) {
		}
			if (plusPetit(x-1,x)) {}
			else {
				echange(x-1,x)
				compteur=compteur+1
			}
		}
	}
}
